<resources>
    <string name="app_name">todo</string>
    <string name="tasks_list">Tasks List</string>
    <string name="settings">Settings</string>
    <string name="save_changes">Save Changes</string>
    <string name="select_date">Select date</string>
    <string name="task_details">Task details</string>
    <string name="this_is_title">This is title</string>
    <string name="edit_text">Edit Text</string>
    <string name="ok">Ok</string>
</resources>